# aorta

./: DDSOptionsDialog.cpp  Makefile.am  aorta.cpp  aorta.rc  configure.ac  imagdds.h  mxe-build.sh
